# minecraft-gpt

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
data/processed/: recipes.pkl  recipes_named.json
notebooks/: playerinfo.py
src/: config.py  core.py  entrypoint.py  main.py
src/agents/: nodes.py  prompt.md  sqlalchemy_store.py  state.py  tools.py
src/agents/prompts/: response.md  supervisor.md  wiki.md
src/data/: encode_json.py  pickle_json.py  transform_recipes.py
